# ColorBotClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: Client.hpp
inc/Scripting/: python.hpp
src/: Client.cpp  main.cpp
src/Scripting/: python.cpp
